# HR_Agent

./: .gitignore  README.md  agent.py  app.py  config.py  pyproject.toml  requirements.txt
data/: employee_data.json  leave_data.json
rag/: loader.py  rag_chain.py  retriever.py  splitter.py  vectordb.py
tools/: employee_tool.py  hr_policy_tool.py  leave_tool.py
